<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">文件快传</string>
    <string name="dir_name">KuaiChuan(文件快传)</string>
    <string name="sender">我要发送</string>
    <string name="receiver">我要接收</string>
    <string name="invite_friend_install">邀请好友安装</string>
    <string name="btn_bluetooth_share">蓝牙分享</string>
    <string name="bluetooth_share">使用蓝牙分享文件快传，\n请保证您的蓝牙是开启状态，\n并让好友也开启蓝牙功能。</string>
    <string name="history_record">历史记录</string>
    <string name="never_mind">下次不再提示</string>
    <string name="welcome_title">欢迎使用文件快传</string>
    <string name="go_on">继续</string>
    <string name="quit">退出</string>
    <string name="welcome">在使用过程中需要获取以下权限：\n连接WLAN网络和断开连接，更改网络连接性，完全的网络访问权限，
        修改或删除您SD卡中的内容，读取您的通讯录，读取您的SD卡中的内容\n是否继续使用？</string>
    <string name="setting_action_title">设置</string>
    <string name="basic_setting">常规设置</string>
    <string name="device_nickname_title">设备昵称</string>
    <string name="device_nickname_value">sim1</string>
    <string name="save_dir_title">文件存储路径</string>
    <string name="save_dir_value">/内部存储器/KuaiChuan(文件快传)</string>
    <string name="dialog_title_modify_device_nickname">修改设备昵称</string>
    <string name="toast_device_nickname_no_emoji">设备名称不支持特殊表情</string>
    <string name="waiting_connect">等待好友连接...</string>
    <string name="self_hotspot_init">正在启动热点...</string>
    <string name="self_hotspot">当前所在网络：</string>
    <string name="sender_search_action_title">设备连接</string>
    <string name="receiver_search_action_title">扫描设备</string>
    <string name="transfer_action_title">文件传输</string>
    <string name="receiver_searching">正在搜索...</string>
    <string name="wifi_disable">当前wifi不可用</string>
    <string name="wifi_disconnected">wifi连接已断开</string>
    <string name="nothing_search_available">未搜索到可用设备</string>
    <string name="research">重新搜索</string>
    <string name="send_files">发送文件</string>
    <string name="blank_page_text">点击下方按钮，开始发送文件吧！</string>
    <string name="blank_page_text_for_receive">没有接收到文件！</string>
    <string name="exit_transfer">确定退出传输？</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="files">文件</string>
    <string name="no_local_files">本地没有文件</string>
    <string name="image">图片</string>
    <string name="wifi_share_file_name" translate="false">hot_spot_share</string>
    <string name="msg_unable_open_file">无法打开此文件</string>
    <string name="choose_file">选择文件</string>
    <string name="selected_files">已选</string>
    <string name="send">发送</string>
    <string name="clear_selected_files">清空</string>
    <string name="self_device">本机</string>
    <string name="process_percentage">0%</string>
    <string name="process">已传输0B文件</string>
    <string name="file_transfer_cancel">取消</string>
    <string name="open">查看</string>
    <string name="install">安装</string>
    <string name="play">播放</string>
    <string name="file_transfer_fail">传输失败</string>
    <string name="file_aready_cancel">已取消</string>
    <string name="file_aready_transfer">已传输</string>
    <string name="file_is_ready_transfer">准备发送中...</string>
    <string name="descr_image">Image</string>
    <string name="select_all_files">全选</string>
    <string name="cancel_select_all_files">取消全选</string>
    <string name="toast_storespace_full">手机存储空间不足，无法接收文件。</string>
    <string name="process_all_complete">文件传输已完成</string>
    <string name="file_send_notification_tilte"><xliff:g>文件快传:正在传输</xliff:g><xliff:g id="COUNT">%s</xliff:g>个文件...</string>
    <string name="file_notification_success_hint"><xliff:g id="COUNT">%s</xliff:g>个成功 </string>
    <string name="file_notification_failed_hint"><xliff:g id="COUNT">%s</xliff:g>个失败 </string>
    <string name="file_notification_disconnect_hint">文件快传：连接中断，传输失败，请重新连接。</string>
    <string name="file_send_all_success_notification_tilte">文件快传:文件传输已结束</string>
    <string name="cancel_all_transfer">取消所有文件传输？</string>
    <string name="file_transfer_cancel_all">全部取消</string>
    <string name="connected_interrupt">连接已中断</string>
    <string name="no_device">还没有连接过任何设备</string>
    <string name="no_history_record">没有历史记录</string>
    <string name="no_files">没有文件</string>
    <string name="clear_record">清除记录</string>
    <string name="connected_devices">连接过的设备</string>
    <string name="no_transfer_history">没有传输历史</string>
    <string name="history_record_title">历史记录</string>
    <string name="apps">应用</string>
    <string name="picture">图片</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="wifi_can_not_share">无法分享该文件</string>
    <string name="group_transfer">群收发</string>
    <string name="create_group">创建群组</string>
    <string name="join_group">加入群组</string>
    <string name="is_online">上线了</string>
    <string name="host">主机</string>
    <string name="is_offline">下线了</string>
</resources>
