<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
        <RelativeLayout
            android:id="@+id/rl_rename"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/btn_setting_item_selector"
            >
            <TextView
                android:id="@+id/rename_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/device_nickname_title"
                android:textColor="#cc000000"
                android:textSize="18sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:id="@+id/rename_sub_title"
                android:layout_below="@id/rename_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/device_nickname_value"
                android:textColor="@color/device_color"
                android:textSize="12sp"
                android:layout_marginLeft="16dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginRight="16dp"
                android:layout_alignParentBottom="true"
                android:background="#50000000"
                android:layout_marginLeft="16dp"/>
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_save_dir"
        android:layout_width="match_parent"
        android:layout_height="64dp"

        >

        <TextView
            android:id="@+id/save_dir_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/save_dir_title"
            android:textColor="#cc000000"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:id="@+id/save_dir_sub_title"
            android:layout_below="@id/save_dir_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/save_dir_value"
            android:textColor="@color/device_color"
            android:textSize="12sp"
            android:layout_marginLeft="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginRight="16dp"
            android:layout_alignParentBottom="true"
            android:background="#50000000"
            android:layout_marginLeft="16dp"/>
    </RelativeLayout>
</LinearLayout>
