<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/home_top_layout_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/home_title_text_color"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/iv_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/actionbar_refresh"
                />
            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/setting_normal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="131dp"
            android:layout_marginBottom="114dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_home_receive_selector"
                android:text="@string/sender"
                android:textSize="18sp"
                android:textColor="#ff9000"
                android:onClick="sender"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="receiver"
                android:textSize="18sp"
                android:textColor="#ff9000"
                android:text="@string/receiver"
                android:background="@drawable/btn_home_receive_selector"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        >
        <RelativeLayout
            android:id="@+id/rl_invite_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            >
            <ImageView
                android:id="@+id/iv_invite_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_share_apk_selector"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/iv_invite_friend"
                android:layout_centerHorizontal="true"
                android:text="@string/invite_friend_install"
                android:textSize="15sp"
                android:textColor="#cc000000"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_group_transfer"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@id/rl_invite_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/iv_group_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/btn_history_record_selector"
                />
            <TextView
                android:layout_below="@+id/iv_group_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"
                android:text="@string/group_transfer"
                android:textColor="#cc000000"
                android:textSize="15sp"
                />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>