<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/ll_no_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingTop="125dp"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blank_page_bg"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_device"
            android:textSize="16sp"
            android:textColor="#33000000"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_has_devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/tv_device_count"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/connected_devices"
            android:textSize="14sp"
            android:textColor="#cc000000"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            />
        <FrameLayout
            android:id="@+id/fl_list_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="54dp"
            >
            <ListView
                android:id="@+id/listview_device"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"/>

        </FrameLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/menu_bg"
        android:layout_gravity="bottom"
        >
        <RelativeLayout
            android:id="@+id/rl_clear_able"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            >
            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/menu_clear_records"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_clear"
                android:layout_marginTop="3dp"
                android:text="@string/clear_record"
                android:textSize="10dp"
                android:textColor="#cc000000"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_clear_disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            >
            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/menu_clear_records_disable"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_clear"
                android:layout_marginTop="3dp"
                android:text="@string/clear_record"
                android:textSize="10dp"
                android:textColor="#66000000"
                />
        </RelativeLayout>

        <ImageButton
            android:foreground="@drawable/bt"
            android:id="@+id/bt_clear"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="100dp"
            android:layout_height="54dp"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


</FrameLayout>
